[package]
name = "rmk-layer-rgb"
version = "0.1.0"
edition = "2021"
description = "Per-layer RGB color definitions and WS2812 controller for RMK keyboards"

[dependencies]
smart-leds = "0.4"
embassy-rp = { version = "0.8", default-features = false, features = ["rp2040"] }
embassy-time = { version = "0.5", default-features = false }
rmk = "0.8"
